# macho-loader

./: CMakeLists.txt  README.md  extract.py
example/: CMakeLists.txt  main.c
src/: end.cpp  end.h  macho.cpp  native.h  order.ld  resolve.cpp  resolve.h  syscalls.cpp  syscalls.h  utils.cpp  utils.h
test/: CMakeLists.txt  main.c
